[package]
name = "cdr-encoding-size-derive"
version = "0.5.0"
edition = "2018"
authors = ["Juhana Helovuo <juhe@iki.fi>"]
description = "Derive macro helper crate for RustDDS"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://atostek.com/en/products/rustdds/"  
repository = "https://github.com/jhelovuo/cdr-encoding-size-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

